fixed dash button alignmet

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -267,7 +267,7 @@ width: 600px;
 }
 
 .date-created, .created-by, .categories {
-    font-weight: lighter;
+    font-weight: bold;
     font-size: small;
     color: #ed6d50;
 }
@@ -355,11 +355,16 @@ tr {
 /*Google Search*/
 
 .site-link {
-    color: #FFFFFF;
+    color: #239cd3;
     font-weight: bold;
-    font-size: 1.5em;
 }
 
 .site-link:hover {
-    color: #ed6d50;
+    color: #fc910d;
+}
+
+/*Tips*/
+
+.search-card {
+    color: black;
 }
